syntax = "proto3";
package com.cornershop.product;

import "resources.proto";

option java_package = "com.cornershop.product.resource";
option java_multiple_files = true;


service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
}